Issue #1046 feat: Samza jobs
1. Refactor image tagging job
2. Refactor content enrichment job

--- a/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
+++ b/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
@@ -76,3 +76,5 @@ s3.url.dev=https://dev.ekstep.in
 s3.url.qa=https://qa.ekstep.in
 s3.url.prod=https://community.ekstep.in
 s3.url.sandbox=https://sandbox.ekstep.in
+
+lp.tempfile.location=__lp_tmpfile_location__
