--- a/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
+++ b/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
@@ -24,7 +24,7 @@ systems.kafka.samza.factory=org.apache.samza.system.kafka.KafkaSystemFactory
 systems.kafka.samza.msg.serde=json
 systems.kafka.streams.metrics.samza.msg.serde=metrics
 systems.kafka.consumer.zookeeper.connect=__zookeepers__
-systems.kafka.consumer.auto.offset.reset=largest
+systems.kafka.consumer.auto.offset.reset=smallest
 systems.kafka.producer.bootstrap.servers=__kafka_brokers__
 
 # Job Coordinator
