Issue #956 chore : Word Enrichment | Samza Jobs

--- a/platform-jobs/samza/word-enrichment/src/main/config/word-enrichment.properties
+++ b/platform-jobs/samza/word-enrichment/src/main/config/word-enrichment.properties
@@ -1,18 +1,19 @@
 # Job
 job.factory.class=org.apache.samza.job.yarn.YarnJobFactory
-job.name=__env__.audit-history-index
+job.name=__env__.word-enrichment
 
 # YARN
 yarn.package.path=http://__yarn_host__:__yarn_port__/__env__/${project.artifactId}-${pom.version}-distribution.tar.gz
 
+
 # Metrics
 metrics.reporters=snapshot,jmx
 metrics.reporter.snapshot.class=org.apache.samza.metrics.reporter.MetricsSnapshotReporterFactory
-metrics.reporter.snapshot.stream=kafka.__env__.lp.metrics
+metrics.reporter.snapshot.stream=kafka.__env__.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.backend.samza.task.AuditHistoryIndexTask
+task.class=org.ekstep.jobs.samza.task.WordEnrichmentTask
 task.inputs=kafka.__env__.learning.graph.events
 
 # Serializers
@@ -24,7 +25,7 @@ systems.kafka.samza.factory=org.apache.samza.system.kafka.KafkaSystemFactory
 systems.kafka.samza.msg.serde=json
 systems.kafka.streams.metrics.samza.msg.serde=metrics
 systems.kafka.consumer.zookeeper.connect=__zookeepers__
-systems.kafka.consumer.auto.offset.reset=largest
+systems.kafka.consumer.auto.offset.reset=smallest
 systems.kafka.producer.bootstrap.servers=__kafka_brokers__
 
 # Job Coordinator
@@ -33,5 +34,5 @@ job.coordinator.system=kafka
 job.coordinator.replication.factor=1
 
 # Job specific config properties
-elastic-search-host=__es_host__
-elastic-search-port=__es_port__
+language-api-url=__language_url__
+ekstepPlatformApiUserId=ilimi
