--- a/platform-jobs/samza/distribution/pom.xml
+++ b/platform-jobs/samza/distribution/pom.xml
@@ -44,15 +44,14 @@
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
 		</dependency>
-	<!-- 
 		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>word-enrichment</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>0.0.1</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
 		</dependency>
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>upload-content</artifactId>
 			<version>1.0-SNAPSHOT</version>
