--- a/platform-jobs/samza/word-enrichment/deploy/samza/config/word-enrichment.properties
+++ b/platform-jobs/samza/word-enrichment/deploy/samza/config/word-enrichment.properties
@@ -1,9 +1,9 @@
 # Job
 job.factory.class=org.apache.samza.job.yarn.YarnJobFactory
-job.name=__env__.word-enrichment
+job.name=dev.word-enrichment
 
 # YARN
-yarn.package.path=file://${basedir}/target/${project.artifactId}-${pom.version}-distribution.tar.gz
+yarn.package.path=file:///home/rashmi/perceptron/LP/Learning-Platform/platform-jobs/samza/word-enrichment/target/word-enrichment-0.0.1-distribution.tar.gz
 
 # Metrics
 metrics.reporters=snapshot,jmx
@@ -14,6 +14,8 @@ metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 # Task
 task.class=org.ekstep.jobs.samza.task.WordEnrichmentTask
 task.inputs=kafka.composite-search-topic
+task.opts=-agentlib:jdwp=transport=dt_socket,address=localhost:9009,server=y,suspend=y
+
 
 # Serializers
 serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
@@ -23,7 +25,7 @@ serializers.registry.metrics.class=org.apache.samza.serializers.MetricsSnapshotS
 systems.kafka.samza.factory=org.apache.samza.system.kafka.KafkaSystemFactory
 systems.kafka.samza.msg.serde=json
 systems.kafka.streams.metrics.samza.msg.serde=metrics
-systems.kafka.consumer.zookeeper.connect=localhost:2181
+systems.kafka.consumer.zookeeper.connect=localhost:2181/
 systems.kafka.consumer.auto.offset.reset=smallest
 systems.kafka.producer.bootstrap.servers=localhost:9092
 
@@ -33,5 +35,4 @@ job.coordinator.system=kafka
 job.coordinator.replication.factor=1
 
 # Job specific config properties
-language-api-url=http://localhost:8080/language-service
-ekstepPlatformApiUserId=ilimi
+language-api-url=https://localhost:8080/language-service
