--- a/platform-jobs/samza/word-enrichment/pom.xml
+++ b/platform-jobs/samza/word-enrichment/pom.xml
@@ -13,14 +13,19 @@
 		<hadoop.version>2.6.2</hadoop.version>
 	</properties>
 	<artifactId>word-enrichment</artifactId>
+	<version>0.0.1</version>
 	<dependencies>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>platform-dac</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>samza-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
