--- a/platform-core/graph-engine/module/graph-engine/pom.xml
+++ b/platform-core/graph-engine/module/graph-engine/pom.xml
@@ -16,6 +16,12 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>platform-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
