--- a/language-platform/module/indexes/pom.xml
+++ b/language-platform/module/indexes/pom.xml
@@ -16,6 +16,12 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>platform-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>language-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
