--- a/platform-jobs/samza/word-enrichment/pom.xml
+++ b/platform-jobs/samza/word-enrichment/pom.xml
@@ -13,7 +13,7 @@
 		<hadoop.version>2.6.2</hadoop.version>
 	</properties>
 	<artifactId>word-enrichment</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.4</version>
 	<dependencies>
 		<dependency>
 			<groupId>com.ilimi</groupId>
@@ -24,6 +24,12 @@
 			<groupId>org.ekstep</groupId>
 			<artifactId>samza-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
