--- a/platform-jobs/samza/distribution/pom.xml
+++ b/platform-jobs/samza/distribution/pom.xml
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>audit-history-indexer</artifactId>
-			<version>0.0.2</version>
+			<version>0.0.3</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
 		</dependency>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>word-enrichment</artifactId>
-			<version>0.0.2</version>
+			<version>0.0.4</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
 		</dependency>
@@ -61,6 +61,13 @@
 		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>publish-pipeline</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency> 
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>bundle-content</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
