--- a/platform-jobs/samza/object-lifecycle/pom.xml
+++ b/platform-jobs/samza/object-lifecycle/pom.xml
@@ -13,8 +13,14 @@
 		<hadoop.version>2.6.2</hadoop.version>
 	</properties>
 	<artifactId>object-lifecycle</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3</version>
 	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.ilimi</groupId>
 			<artifactId>learning-actors</artifactId>
