--- a/platform-jobs/samza/audit-history-indexer/pom.xml
+++ b/platform-jobs/samza/audit-history-indexer/pom.xml
@@ -16,6 +16,12 @@
 	<version>0.0.3</version>
 	<dependencies>
 		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>2.3.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.ilimi</groupId>
 			<artifactId>platform-dac</artifactId>
 			<version>1.0-SNAPSHOT</version>
