--- a/platform-modules/service/src/main/resources/application.conf
+++ b/platform-modules/service/src/main/resources/application.conf
@@ -1,13 +1,17 @@
 LearningActorSystem{
-	default-dispatcher {
-  		type = "Dispatcher"
-		executor = "fork-join-executor"
-		fork-join-executor {
-    		parallelism-min = 1
-    		parallelism-factor = 2.0
-    		parallelism-max = 4
-		}
-  		# Throughput for default Dispatcher, set to 1 for as fair as possible
-  		throughput = 1
-	}
+  akka {
+    actor {
+    	default-dispatcher {
+      		type = "Dispatcher"
+    		executor = "fork-join-executor"
+    		fork-join-executor {
+        		parallelism-min = 1
+        		parallelism-factor = 2.0
+        		parallelism-max = 4
+    		}
+      		# Throughput for default Dispatcher, set to 1 for as fair as possible
+      		throughput = 1
+    	}
+    }
+  }
 }
