Issue #1071 fix: word-enrichment samza job changes

--- a/platform-jobs/samza/word-enrichment/src/main/config/word-enrichment.properties
+++ b/platform-jobs/samza/word-enrichment/src/main/config/word-enrichment.properties
@@ -36,3 +36,50 @@ job.coordinator.replication.factor=1
 # Job specific config properties
 language-api-url=__language_url__
 ekstepPlatformApiUserId=ilimi
+
+# Job specific config properties
+graph.dir=/data/graphDB
+redis.host=__redis_host__
+redis.port=__redis_port__
+redis.maxConnections=128
+akka.request_timeout=30
+environment.id=__environment_id__
+graph.passport.key.base=__graph_passport_key__
+route.domain=__lp_bolt_url__
+route.bolt.read.domain=__lp_bolt_read_url__
+route.bolt.write.domain=__lp_bolt_write_url__
+route.all=__other_bolt_url__
+route.bolt.read.all=__other_bolt_read_url__
+route.bolt.write.all=__other_bolt_write_url__
+shard.id=__mw_shard_id__
+
+#language-indexes 
+elastic-search-host=http://__es_host__
+elastic-search-port=__es_port__
+ignoreStartWordsList=<Sentence,id=,<fs,head=,case_name=,paradigm=,name=,inf=
+tagNamesList=NN,NST,PRP,DEM,VM,VAUX,JJ,RB,PSP,RP,CC,WQ,QF,QC,QO,CL,INTF,INJ,NEG,*C,RDP,ECH,UNK,NP,VGF,VGNF,VGINF,VGNN,JJP,RBP,NEGP,CCP,FRAGP,BLK
+discardTokensList=NNP,((,)),SYM
+attributesTagIdentifier=af
+specialCharRegEx=^([$&+,:;=?@#|!]*)$
+numberRegEx=^([+-]?\\d*\\.?\\d*)$
+defaultTokenCountAfterWord=10
+
+#language-map
+hi=Hindi
+en=English
+te=Telugu
+ka=Kannada
+ta=Tamil
+as=Assamese
+bn=Bengali
+bo=Bodo
+gu=Gujarati
+ko=Konkani
+ml=Malayalam
+mr=Marathi
+ne=Nepali
+or=Odia
+pa=Punjabi
+sa=Sanskrit
+
+
