--- a/platform-jobs/samza/word-enrichment/pom.xml
+++ b/platform-jobs/samza/word-enrichment/pom.xml
@@ -13,11 +13,11 @@
 		<hadoop.version>2.6.2</hadoop.version>
 	</properties>
 	<artifactId>word-enrichment</artifactId>
-	<version>0.0.5</version>
+	<version>0.0.6</version>
 	<dependencies>
 		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>platform-dac</artifactId>
+			<groupId>org.ekstep</groupId>
+			<artifactId>language-actors</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
