--- a/platform-jobs/samza/word-enrichment/src/main/config/local.word-enrichment.properties
+++ b/platform-jobs/samza/word-enrichment/src/main/config/local.word-enrichment.properties
@@ -35,3 +35,39 @@ job.coordinator.replication.factor=1
 # Job specific config properties
 language-api-url=http://localhost:8080/language-service
 ekstepPlatformApiUserId=ilimi
+# Job specific config properties
+graph.dir=/data/graphDB
+redis.host=localhost
+redis.port=6379
+redis.maxConnections=128
+akka.request_timeout=30
+environment.id=10000000
+
+#language-indexes 
+elastic-search-host=http://localhost
+elastic-search-port=9200
+ignoreStartWordsList=<Sentence,id=,<fs,head=,case_name=,paradigm=,name=,inf=
+tagNamesList=NN,NST,PRP,DEM,VM,VAUX,JJ,RB,PSP,RP,CC,WQ,QF,QC,QO,CL,INTF,INJ,NEG,*C,RDP,ECH,UNK,NP,VGF,VGNF,VGINF,VGNN,JJP,RBP,NEGP,CCP,FRAGP,BLK
+discardTokensList=NNP,((,)),SYM
+attributesTagIdentifier=af
+specialCharRegEx=^([$&+,:;=?@#|!]*)$
+numberRegEx=^([+-]?\\d*\\.?\\d*)$
+defaultTokenCountAfterWord=10
+
+#language-map
+hi=Hindi
+en=English
+te=Telugu
+ka=Kannada
+ta=Tamil
+as=Assamese
+bn=Bengali
+bo=Bodo
+gu=Gujarati
+ko=Konkani
+ml=Malayalam
+mr=Marathi
+ne=Nepali
+or=Odia
+pa=Punjabi
+sa=Sanskrit
