Issue #1098 Feat: update swagger docs

--- a/docs/domain_model_v2/api-docs/swagger/content_model_api/content_model_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/content_model_api/content_model_apis.yaml
@@ -406,7 +406,7 @@ paths:
           schema:
             $ref: '#/definitions/ContentBundleErrorResponse'
       security: []
-  '/history/{contentId}':
+  '/history/{contentId}?graphId={graphId}':
     get:
       tags:
         - History
@@ -421,6 +421,7 @@ paths:
         - application/json
       parameters:
         - $ref: '#/parameters/ContentId'
+        - $ref: '#/parameters/graphId'
       responses:
         '200':
           description: Content History returned Successfully
@@ -642,6 +643,12 @@ parameters:
       $ref: '#/definitions/ContentBundleRequestObject'
   ContentId:
     name: contentId
+    in: path
+    type: string
+    description: The given Content identifier to perform operation
+    required: true
+  graphId:
+    name: graphId
     in: path
     type: string
     description: The given Content identifier to perform operation
