Issue #000 feat: BaseTest for neo4j embedded implementation

--- a/platform-modules/manager/src/test/resources/graph.properties
+++ b/platform-modules/manager/src/test/resources/graph.properties
@@ -1,5 +1,15 @@
 graph.dir=/data/testGraphDB
+testGraph=domain
 redis.host=localhost
 redis.port=6379
 redis.maxConnections=128
 akka.request_timeout=30
+route.domain=bolt://localhost:7687
+route.bolt.write.domain=bolt://localhost:7687
+route.bolt.read.domain=bolt://localhost:7687
+route.bolt.comment.domain=bolt://localhost:7687
+route.all=bolt://localhost:7687
+route.bolt.write.all=bolt://localhost:7687
+route.bolt.read.all=bolt://localhost:7687
+route.bolt.comment.all=bolt://localhost:7687
+shard.id=1
