--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+		 <dependency>
+			    <groupId>org.neo4j</groupId>
+			    <artifactId>neo4j-bolt</artifactId>
+			    <version>3.0.4</version>
+ 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
