Issue #1122 feat: Refactor platform unit testCases

--- a/platform-modules/manager/src/test/resources/amazonS3Config.properties
+++ b/platform-modules/manager/src/test/resources/amazonS3Config.properties
@@ -4,7 +4,7 @@
 s3.env = dev
 
 #Environment specific buckets
-s3.bucket.dev = ekstep-public-dev
+s3.bucket.dev = ekstep-public
 s3.bucket.qa = ekstep-public-qa
 s3.bucket.prod = ekstep-public-prod
 
