--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ coverageReport/
 platform-modules/service/src/main/webapp/WEB-INF/lib/httpclient-4.5.1.jar
 platform-modules/service/src/main/webapp/WEB-INF/lib/httpcore-4.4.4.jar
 language-platform/module/scripts/orchestrator/node_modules/
+*.
+*.
+H5PContentWorkflowTest.java
