--- a/platform-core/graph-engine/module/cache-manager/pom.xml
+++ b/platform-core/graph-engine/module/cache-manager/pom.xml
@@ -15,5 +15,11 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+		  	<groupId>com.github.kstyrc</groupId>
+		  	<artifactId>embedded-redis</artifactId>
+		  	<version>0.6</version>
+		  	<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
