--- a/language-platform/module/tools/lexile-algorithms/bin/pom.xml
+++ b/language-platform/module/tools/lexile-algorithms/bin/pom.xml
@@ -11,7 +11,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.ilimi</groupId>
-			<artifactId>graph-cache-mgr-api</artifactId>
+			<artifactId>graph-cache-mgr</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
