--- a/platform-core/platform-common/pom.xml
+++ b/platform-core/platform-common/pom.xml
@@ -50,6 +50,11 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.7.4</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.typesafe</groupId>
+		    <artifactId>config</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
