--- a/platform-core/graph-engine/module/cache-manager/src/test/resources/application.conf
+++ b/platform-core/graph-engine/module/cache-manager/src/test/resources/application.conf
@@ -1,2 +1,8 @@
-# Test Configurations
+
+# Redis Configuration
+redis.host=localhost
+redis.port=6379
+redis.maxConnections=128
+
+# Cache-Manager Configurations
 cache.type="in-memory"
