--- a/platform-modules/service/src/test/resources/application.conf
+++ b/platform-modules/service/src/test/resources/application.conf
@@ -15,3 +15,11 @@ LearningActorSystem{
     }
   }
 }
+
+#Cache-Manager Configuration
+cache.type="in-memory"
+
+# Redis Configuration
+redis.host=localhost
+redis.port=6379
+redis.maxConnections=128
