Issue #000 fix: code refactoring.

--- a/platform-modules/manager/src/test/resources/application.conf
+++ b/platform-modules/manager/src/test/resources/application.conf
@@ -16,6 +16,9 @@ LearningActorSystem{
   }
 }
 
+#Content Configuration
+content.metadata.visibility.parent=["textbookunit", "courseunit", "lessonplanunit"]
+
 # Redis Configuration
 redis.host=localhost
 redis.port=6379
