--- a/platform-modules/service/src/test/resources/application.conf
+++ b/platform-modules/service/src/test/resources/application.conf
@@ -16,6 +16,9 @@ LearningActorSystem{
   }
 }
 
+#Content Configuration
+content.metadata.visibility.parent=["textbookunit", "courseunit", "lessonplanunit"]
+
 #Cache-Manager Configuration
 cache.type="in-memory"
 
