Issue ekstep/Learning-Platform#1127 feat: Cache-Manager enhancements deployment.

--- a/platform-modules/service/src/test/resources/application.conf
+++ b/platform-modules/service/src/test/resources/application.conf
@@ -16,7 +16,7 @@ LearningActorSystem{
   }
 }
 
-#Content Configuration
+# Learning-Service Configuration
 content.metadata.visibility.parent=["textbookunit", "courseunit", "lessonplanunit"]
 
 #Cache-Manager Configuration
