Issue #1118 feat : Publish samza job

--- a/platform-jobs/samza/publish-pipeline/src/main/config/local.publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/local.publish-pipeline.properties
@@ -1,6 +1,6 @@
 # Job
 job.factory.class=org.apache.samza.job.yarn.YarnJobFactory
-job.name=dev.audit-history-index
+job.name=dev.publish.pipeline
 
 # YARN
 yarn.package.path=file://${basedir}/target/${project.artifactId}-${pom.version}-distribution.tar.gz
@@ -12,8 +12,8 @@ metrics.reporter.snapshot.stream=kafka.dev.lp.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.jobs.samza.task.AuditHistoryIndexTask
-task.inputs=kafka.dev.learning.graph.events
+task.class=org.ekstep.jobs.samza.task.PublishPipelineTask
+task.inputs=kafka.telemetry.raw
 task.opts=-agentlib:jdwp=transport=dt_socket,address=localhost:9009,server=y,suspend=y
 
 # Serializers
@@ -34,5 +34,64 @@ job.coordinator.system=kafka
 job.coordinator.replication.factor=1
 
 # Job specific config properties
-elastic-search-host=http://52.74.51.23
-elastic-search-port=9200
+graph.dir=/data/graphDB
+redis.host=localhost
+redis.port=6379
+redis.maxConnections=128
+akka.request_timeout=30
+environment.id=10000000
+graph.ids=domain
+graph.passport.key.base=31b6fd1c4d64e745c867e61a45edc34a
+route.domain=bolt://localhost:7687
+route.bolt.write.domain=bolt://localhost:7687
+route.bolt.read.domain=bolt://localhost:7687
+route.bolt.comment.domain=bolt://localhost:7687
+route.all=bolt://localhost:7687
+route.bolt.write.all=bolt://localhost:7687
+route.bolt.read.all=bolt://localhost:7687
+route.bolt.comment.all=bolt://localhost:7687
+shard.id=1
+platform.auth.check.enabled=false
+platform.cache.ttl=3600000
+
+#S3 server configurations
+
+#Environment specific buckets
+s3.bucket.dev=ekstep-public
+s3.bucket.qa=ekstep-public-qa
+s3.bucket.prod=ekstep-public-prod
+s3.bucket.sandbox=ekstep-public-sandbox
+
+#S3 Region configuration
+s3.region = AP_SOUTH_1
+
+#Folder configuration
+s3.content.folder=content
+s3.asset.folder=assets
+s3.artifact.folder=artifact
+s3.bundle.folder=bundle
+s3.media.folder=media
+s3.ecar.folder=ecar_files
+
+s3.upload.url.expiry = 600
+
+#Envionment specific URL prefix
+s3.url.dev=https://dev.ekstep.in
+s3.url.qa=https://qa.ekstep.in
+s3.url.prod=https://community.ekstep.in
+s3.url.sandbox=https://sandbox.ekstep.in
+
+#directory location where store unzip file
+dist.directory = /data/tmp/dist/
+output.zipfile = /data/tmp/story.zip
+source.folder  = /data/tmp/temp2/
+save.directory = /data/tmp/temp/
+
+MAX_CONTENT_PACKAGE_FILE_SIZE_LIMIT = 52428800
+MAX_ASSET_FILE_SIZE_LIMIT = 20971520
+RETRY_ASSET_DOWNLOAD_COUNT = 1
+
+cassandra.host=localhost
+cassandra.port=9042
+
+lp.tempfile.location=__lp_tmpfile_location__
