Issue #1118 feat : Publish samza job

--- a/platform-jobs/samza/distribution/pom.xml
+++ b/platform-jobs/samza/distribution/pom.xml
@@ -51,16 +51,16 @@
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
 		</dependency>
-	<!-- 	<dependency>
-			<groupId>org.ekstep</groupId>
-			<artifactId>upload-content</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<type>tar.gz</type>
-			<classifier>distribution</classifier>
-		</dependency> 
 		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>publish-pipeline</artifactId>
+			<version>0.0.1</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency> 
+	<!--<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>upload-content</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
