--- a/platform-jobs/samza/publish-pipeline/pom.xml
+++ b/platform-jobs/samza/publish-pipeline/pom.xml
@@ -13,7 +13,7 @@
 		<hadoop.version>2.6.2</hadoop.version>
 	</properties>
 	<artifactId>publish-pipeline</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.ekstep</groupId>
@@ -25,6 +25,12 @@
 			<groupId>org.ekstep</groupId>
 			<artifactId>samza-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>ekstep-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>com.ilimi</groupId>
