--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -49,6 +49,7 @@ shard.id=__mw_shard_id__
 cassandra.host=__cassandra_host__
 cassandra.port=__cassandra_port__
 CONTENT_TO_VEC_URL=__content_to_vec_url__
+s3.env=__s3_config_environment__
 
 #S3 server configurations
 
