Issue #1118 feat : Publish samza job

--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -50,6 +50,8 @@ cassandra.host=__cassandra_host__
 cassandra.port=__cassandra_port__
 CONTENT_TO_VEC_URL=__content_to_vec_url__
 s3.env=__s3_config_environment__
+platform-api-url=__lp_url__
+ekstepPlatformApiUserId=ilimi
 
 #S3 server configurations
 
