--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -116,9 +116,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.datastax.cassandra</groupId>
-			<artifactId>cassandra-driver-core</artifactId>
-			<version>2.1.4</version>
+	    		<groupId>com.datastax.cassandra</groupId>
+	    		<artifactId>cassandra-driver-core</artifactId>
+	    		<version>3.1.2</version>
+	    		<scope>test</scope>
 		</dependency>
 	</dependencies>
 
