IIssue ekstep/Learning-Platform#1131 feat:Tags as metadata search backward compatibility.

--- a/searchIndex-platform/module/search-api/search-manager/conf/application.conf
+++ b/searchIndex-platform/module/search-api/search-manager/conf/application.conf
@@ -88,3 +88,6 @@ logger.application=DEBUG
 
 # Path for elasticsearch.properties file
 search.config.path=/home/learning/platform/search
+
+# Cache-Manager Configuration
+cache.type="redis"
