--- a/platform-jobs/samza/audit-history-indexer/pom.xml
+++ b/platform-jobs/samza/audit-history-indexer/pom.xml
@@ -37,6 +37,12 @@
 			<artifactId>samza-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.10.19</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
