Issue #1147 feat : Update contentStoreUtil to take cassandra keyspace details from application.conf

--- a/platform-modules/service/src/test/resources/application.conf
+++ b/platform-modules/service/src/test/resources/application.conf
@@ -19,6 +19,10 @@ LearningActorSystem{
 # Learning-Service Configuration
 content.metadata.visibility.parent=["textbookunit", "courseunit", "lessonplanunit"]
 
+# Cassandra Connector Configuration
+keyspace.name=content_store
+keyspace.table=content_data
+
 #Cache-Manager Configuration
 cache.type="in-memory"
 
