--- a/language-platform/module/controllers/pom.xml
+++ b/language-platform/module/controllers/pom.xml
@@ -69,6 +69,12 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+	 	<dependency>
+		    <groupId>org.neo4j</groupId>
+		    <artifactId>neo4j-bolt</artifactId>
+		    <version>3.0.4</version>
+   			<scope>test</scope>
+ 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
