--- a/platform-jobs/samza/word-enrichment/pom.xml
+++ b/platform-jobs/samza/word-enrichment/pom.xml
@@ -13,7 +13,7 @@
 		<hadoop.version>2.6.2</hadoop.version>
 	</properties>
 	<artifactId>word-enrichment</artifactId>
-	<version>0.0.10</version>
+	<version>0.0.11</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.ekstep</groupId>
@@ -25,6 +25,12 @@
 			<artifactId>samza-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+	 	<dependency>
+		    <groupId>org.neo4j</groupId>
+		    <artifactId>neo4j-bolt</artifactId>
+		    <version>3.0.4</version>
+   			<scope>test</scope>
+ 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
