--- a/platform-tests/functional-tests/src/test/resources/application.conf
+++ b/platform-tests/functional-tests/src/test/resources/application.conf
@@ -11,3 +11,8 @@ ActorSystem{
   		throughput = 1
 	}
 }
+
+functional_tests {
+    base_uri = "https://dev.ekstep.in/api/"
+    access_key = "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiI1OWFiMmE2MDc1YzI0ODU2YjhiYjIzMjg4ZDdhZGNmNSJ9.RLouNX7RQ0VkVv2BYqNtH12D0IzKnBJ_I46xEORwHsU"
+}
