--- a/platform-modules/service/src/test/resources/application.conf
+++ b/platform-modules/service/src/test/resources/application.conf
@@ -48,10 +48,10 @@ CONTENT_TO_VEC_URL="http://172.31.27.233:9000/content-to-vec"
 OPERATION_MODE=TEST
 
 #--Maximum Content Package File Size Limit in Bytes (50 MB)
-MAX_CONTENT_PACKAGE_FILE_SIZE_LIMIT=5.24288E7
+MAX_CONTENT_PACKAGE_FILE_SIZE_LIMIT=52428800
 
 #--Maximum Asset File Size Limit in Bytes (20 MB)
-MAX_ASSET_FILE_SIZE_LIMIT=2.097152E7
+MAX_ASSET_FILE_SIZE_LIMIT=20971520
 
 #--No of Retry While File Download Fails
 RETRY_ASSET_DOWNLOAD_COUNT=1
