Issue #1169 feat : refactor composite-search-samza job to fetch definition from cache via actor call

--- a/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
+++ b/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
@@ -37,3 +37,18 @@ elastic-search-host=http://__es_host__
 elastic-search-port=__es_port__
 platform-api-url=__lp_url__
 ekstepPlatformApiUserId=ilimi
+
+# neo4j configurations
+redis.host=__redis_host__
+redis.port=__redis_port__
+redis.maxConnections=128
+akka.request_timeout=30
+environment.id=__environment_id__
+graph.passport.key.base=__graph_passport_key__
+route.domain=__lp_bolt_url__
+route.bolt.read.domain=__lp_bolt_read_url__
+route.bolt.write.domain=__lp_bolt_write_url__
+route.all=__other_bolt_url__
+route.bolt.read.all=__other_bolt_read_url__
+route.bolt.write.all=__other_bolt_write_url__
+shard.id=__mw_shard_id__
