--- a/platform-jobs/samza/audit-history-indexer/pom.xml
+++ b/platform-jobs/samza/audit-history-indexer/pom.xml
@@ -13,7 +13,7 @@
 		<hadoop.version>2.6.2</hadoop.version>
 	</properties>
 	<artifactId>audit-history-indexer</artifactId>
-	<version>0.0.3</version>
+	<version>0.0.4</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
@@ -36,6 +36,11 @@
 			<groupId>org.ekstep</groupId>
 			<artifactId>samza-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.typesafe</groupId>
+		    <artifactId>config</artifactId>
+		    <version>1.3.1</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.mockito</groupId>
