--- a/platform-jobs/samza/composite-search-indexer/pom.xml
+++ b/platform-jobs/samza/composite-search-indexer/pom.xml
@@ -16,6 +16,11 @@
 	<version>0.0.3</version>
 	<dependencies>
 		<dependency>
+		    <groupId>com.typesafe</groupId>
+		    <artifactId>config</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<version>2.3.4</version>
