--- a/platform-jobs/samza/common/pom.xml
+++ b/platform-jobs/samza/common/pom.xml
@@ -15,6 +15,11 @@
 	<artifactId>samza-common</artifactId>
 	<dependencies>
 		<dependency>
+		    <groupId>com.typesafe</groupId>
+		    <artifactId>config</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.samza</groupId>
 			<artifactId>samza-api</artifactId>
 			<version>${samza.version}</version>
