Issue #956 chore : Update cassandra keyspace for publish samza job

--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -48,6 +48,8 @@ route.bolt.write.all=__other_bolt_write_url__
 shard.id=__mw_shard_id__
 cassandra.host=__cassandra_host__
 cassandra.port=__cassandra_port__
+keyspace.name=__keyspace_name__
+keyspace.table=__keyspace_table__
 CONTENT_TO_VEC_URL=__content_to_vec_url__
 s3.env=__s3_config_environment__
 platform-api-url=__lp_url__
