Issue #1168 feat : merge language configuration files to application.conf

--- a/language-platform/module/actors/src/test/resources/application.conf
+++ b/language-platform/module/actors/src/test/resources/application.conf
@@ -7,7 +7,25 @@ ActorSystem{
     		parallelism-factor = 2.0
     		parallelism-max = 4
 		}
-  		# Throughput for default Dispatcher, set to 1 for as fair as possible
+  		# Throughput for default Dispatcher"," set to 1 for as fair as possible
   		throughput = 1
 	}
 }
+graph.dir=/data/testgraphDB
+redis.host=localhost
+redis.port=6379
+redis.maxConnections=128
+akka.request_timeout=30
+
+elastic-search-host="http://localhost"
+elastic-search-port=9200
+ignoreStartWordsList=["<Sentence","id=","<fs","head=","case_name=","paradigm=","name=","inf="]
+tagNamesList=["NN","NST","PRP","DEM","VM","VAUX","JJ","RB","PSP","RP","CC","WQ","QF","QC","QO","CL","INTF","INJ","NEG","*C","RDP","ECH","UNK","NP","VGF","VGNF","VGINF","VGNN","JJP","RBP","NEGP","CCP","FRAGP","BLK"]
+discardTokensList=["NNP","((","))","SYM"]
+attributesTagIdentifier=af
+defaultTokenCountAfterWord=10
+specialCharRegEx="^([$&+,:;=?@#|!]*)$"
+numberRegEx="^([+-]?\\d*\\.?\\d*)$"
+redis.host=localhost
+redis.port=6379
+redis.maxConnections=128
