--- a/platform-modules/content-manager/src/test/resources/application.conf
+++ b/platform-modules/content-manager/src/test/resources/application.conf
@@ -11,3 +11,44 @@ ActorSystem{
   		throughput = 1
 	}
 }
+
+#S3 server configurations
+
+#Current environment
+s3.env = dev
+
+#Environment specific buckets
+s3.bucket.dev=ekstep-public
+s3.bucket.qa=ekstep-public-qa
+s3.bucket.prod=ekstep-public-prod
+
+#S3 Region configuration
+s3.region=AP_SOUTHEAST_1
+
+#Folder configuration
+s3.content.folder=content
+s3.asset.folder=assets
+s3.artifact.folder=artifact
+s3.bundle.folder=bundle
+s3.media.folder=media
+s3.ecar.folder=ecar_files
+
+graph.dir="/data/testgraphDB"
+redis.host=localhost
+redis.port=6379
+bulk-load-batch-size=500
+redis.maxConnections=128
+connection-timeout=30
+akka.request_timeout=30
+graph.ids=["language","en","hi","ka","te","ta","enTest","kaTest"]
+environment.id=10000000
+
+elastic-search-host="http://localhost"
+elastic-search-port=9200
+ignoreStartWordsList=["<Sentence","id=","<fs","head=","case_name=","paradigm=","name=","inf="]
+tagNamesList=["NN","NST","PRP","DEM","VM","VAUX","JJ","RB","PSP","RP","CC","WQ","QF","QC","QO","CL","INTF","INJ","NEG","*C","RDP","ECH","UNK","NP","VGF","VGNF","VGINF","VGNN","JJP","RBP","NEGP","CCP","FRAGP","BLK"]
+discardTokensList=["NNP","((","))","SYM"]
+attributesTagIdentifier=af
+defaultTokenCountAfterWord=10
+specialCharRegEx="^([$&+,:;=?@#|!]*)$"
+numberRegEx="^([+-]?\\d*\\.?\\d*)$"
