Issue #956 chore : update configuration for audit History samza job

--- a/platform-jobs/samza/audit-history-indexer/src/main/config/local.audit-history-indexer.properties
+++ b/platform-jobs/samza/audit-history-indexer/src/main/config/local.audit-history-indexer.properties
@@ -35,3 +35,5 @@ job.coordinator.replication.factor=1
 # Job specific config properties
 elastic-search-host=http://localhost
 elastic-search-port=9200
+bulk-load-batch-size=500
+connection-timeout=30
