--- a/platform-jobs/samza/audit-history-indexer/src/main/config/audit-history-indexer.properties
+++ b/platform-jobs/samza/audit-history-indexer/src/main/config/audit-history-indexer.properties
@@ -35,3 +35,5 @@ job.coordinator.replication.factor=1
 # Job specific config properties
 elastic-search-host=http://__es_host__
 elastic-search-port=__es_port__
+bulk-load-batch-size=500
+connection-timeout=30
