--- a/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
+++ b/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
@@ -52,3 +52,43 @@ route.all=__other_bolt_url__
 route.bolt.read.all=__other_bolt_read_url__
 route.bolt.write.all=__other_bolt_write_url__
 shard.id=__mw_shard_id__
+graph.dir="/data/graphDB"
+graph.ids="domain"
+platform.auth.check.enabled=false
+platform.cache.ttl=3600000
+
+LearningActorSystem {
+  akka {
+    actor {
+      default-dispatcher {
+          type = "Dispatcher"
+        executor = "fork-join-executor"
+        fork-join-executor {
+            parallelism-min = 1
+            parallelism-factor = 2.0
+            parallelism-max = 4
+        }
+          # Throughput for default Dispatcher, set to 1 for as fair as possible
+          throughput = 1
+      }
+    }
+  }
+}
+
+LanguageActorSystem {
+  akka {
+    actor {
+      default-dispatcher {
+        type = "Dispatcher"
+        executor = "fork-join-executor"
+        fork-join-executor {
+          parallelism-min = 1
+          parallelism-factor = 2.0
+          parallelism-max = 4
+        }
+        # Throughput for default Dispatcher, set to 1 for as fair as possible
+        throughput = 1
+      }
+    }
+  }
+}
