--- a/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
@@ -52,10 +52,7 @@ s3.env=__s3_config_environment__
 #S3 server configurations
 
 #Environment specific buckets
-s3.bucket.dev=ekstep-public-dev
-s3.bucket.qa=ekstep-public-qa
-s3.bucket.prod=ekstep-public-prod
-s3.bucket.sandbox=ekstep-public-sandbox
+s3.public.bucket=__s3_public_bucket__
 
 #S3 Region configuration
 s3.region=AP_SOUTH_1
