Issue #956 chore : update samza job configuration - imageTagging

--- a/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
@@ -48,6 +48,10 @@ route.bolt.read.all=__other_bolt_read_url__
 route.bolt.write.all=__other_bolt_write_url__
 shard.id=__mw_shard_id__
 s3.env=__s3_config_environment__
+graph.dir="/data/graphDB"
+graph.ids="domain"
+platform.auth.check.enabled=false
+platform.cache.ttl=3600000
 
 #S3 server configurations
 
