Issue #956 chore : update job configuration for composite and imageTagging samza jobs

--- a/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
@@ -49,7 +49,7 @@ route.bolt.write.all=__other_bolt_write_url__
 shard.id=__mw_shard_id__
 s3.env=__s3_config_environment__
 graph.dir="/data/graphDB"
-graph.ids="domain"
+graph.ids=["domain","language","en","hi","ka","te","ta"]
 platform.auth.check.enabled=false
 platform.cache.ttl=3600000
 
