--- a/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
+++ b/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
@@ -53,6 +53,6 @@ route.bolt.read.all=__other_bolt_read_url__
 route.bolt.write.all=__other_bolt_write_url__
 shard.id=__mw_shard_id__
 graph.dir="/data/graphDB"
-graph.ids="domain"
+graph.ids=["domain","language","en","hi","ka","te","ta"]
 platform.auth.check.enabled=false
 platform.cache.ttl=3600000
