Issue #956 chore : update job configuration for composite and imageTagging samza jobs

--- a/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
@@ -39,13 +39,13 @@ redis.port=__redis_port__
 redis.maxConnections=128
 akka.request_timeout=30
 environment.id=__environment_id__
-graph.passport.key.base=__graph_passport_key__
-route.domain=__lp_bolt_url__
-route.bolt.read.domain=__lp_bolt_read_url__
-route.bolt.write.domain=__lp_bolt_write_url__
-route.all=__other_bolt_url__
-route.bolt.read.all=__other_bolt_read_url__
-route.bolt.write.all=__other_bolt_write_url__
+graph.passport.key.base="__graph_passport_key__"
+route.domain="__lp_bolt_url__"
+route.bolt.read.domain="__lp_bolt_read_url__"
+route.bolt.write.domain="__lp_bolt_write_url__"
+route.all="__other_bolt_url__"
+route.bolt.read.all="__other_bolt_read_url__"
+route.bolt.write.all="__other_bolt_write_url__"
 shard.id=__mw_shard_id__
 s3.env=__s3_config_environment__
 graph.dir="/data/graphDB"
@@ -72,8 +72,8 @@ s3.ecar.folder=ecar_files
 s3.upload.url.expiry = 600
 
 #Envionment specific URL prefix
-s3.url.dev=https://dev.ekstep.in
-s3.url.qa=https://qa.ekstep.in
-s3.url.prod=https://community.ekstep.in
-s3.url.sandbox=https://sandbox.ekstep.in
+s3.url.dev="https://dev.ekstep.in"
+s3.url.qa="https://qa.ekstep.in"
+s3.url.prod="https://community.ekstep.in"
+s3.url.sandbox="https://sandbox.ekstep.in"
 lp.tempfile.location=__lp_tmpfile_location__
