--- a/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
+++ b/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
@@ -44,13 +44,13 @@ redis.port=__redis_port__
 redis.maxConnections=128
 akka.request_timeout=30
 environment.id=__environment_id__
-graph.passport.key.base=__graph_passport_key__
-route.domain=__lp_bolt_url__
-route.bolt.read.domain=__lp_bolt_read_url__
-route.bolt.write.domain=__lp_bolt_write_url__
-route.all=__other_bolt_url__
-route.bolt.read.all=__other_bolt_read_url__
-route.bolt.write.all=__other_bolt_write_url__
+graph.passport.key.base="__graph_passport_key__"
+route.domain="__lp_bolt_url__"
+route.bolt.read.domain="__lp_bolt_read_url__"
+route.bolt.write.domain="__lp_bolt_write_url__"
+route.all="__other_bolt_url__"
+route.bolt.read.all="__other_bolt_read_url__"
+route.bolt.write.all="__other_bolt_write_url__"
 shard.id=__mw_shard_id__
 graph.dir="/data/graphDB"
 graph.ids=["domain","language","en","hi","ka","te","ta"]
