--- a/platform-jobs/samza/common/pom.xml
+++ b/platform-jobs/samza/common/pom.xml
@@ -71,6 +71,16 @@
 			<type>tgz</type>
 			<version>${samza.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.typesafe</groupId>
+		    <artifactId>config</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>platform-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
