Issue #956 chore : update samza job configuration for all jobs

--- a/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
+++ b/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
@@ -49,14 +49,15 @@ shard.id=__mw_shard_id__
 platform-api-url=__lp_url__
 ekstepPlatformApiUserId=ilimi
 s3.env=__s3_config_environment__
+graph.dir="/data/graphDB"
+graph.ids=["domain","language","en","hi","ka","te","ta"]
+platform.auth.check.enabled=false
+platform.cache.ttl=3600000
 
 #S3 server configurations
 
 #Environment specific buckets
-s3.bucket.dev=ekstep-public-dev
-s3.bucket.qa=ekstep-public-qa
-s3.bucket.prod=ekstep-public-prod
-s3.bucket.sandbox=ekstep-public-sandbox
+s3.public.bucket=__s3_public_bucket__
 
 #S3 Region configuration
 s3.region=AP_SOUTH_1
