--- a/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
@@ -72,8 +72,8 @@ s3.ecar.folder=ecar_files
 s3.upload.url.expiry = 600
 
 #Envionment specific URL prefix
-s3.url.dev="https://dev.ekstep.in"
-s3.url.qa="https://qa.ekstep.in"
-s3.url.prod="https://community.ekstep.in"
-s3.url.sandbox="https://sandbox.ekstep.in"
+s3.url.dev=https://dev.ekstep.in
+s3.url.qa=https://qa.ekstep.in
+s3.url.prod=https://community.ekstep.in
+s3.url.sandbox=https://sandbox.ekstep.in
 lp.tempfile.location=__lp_tmpfile_location__
