--- a/platform-jobs/samza/object-lifecycle/src/main/config/object-lifecycle.properties
+++ b/platform-jobs/samza/object-lifecycle/src/main/config/object-lifecycle.properties
@@ -47,3 +47,7 @@ route.all=__other_bolt_url__
 route.bolt.read.all=__other_bolt_read_url__
 route.bolt.write.all=__other_bolt_write_url__
 shard.id=__mw_shard_id__
+graph.dir="/data/graphDB"
+graph.ids=["domain","language","en","hi","ka","te","ta"]
+platform.auth.check.enabled=false
+platform.cache.ttl=3600000
