Issue #1199 feat : update word enrichment and publish samza jobs with single configuration changes

--- a/platform-jobs/samza/word-enrichment/src/main/config/word-enrichment.properties
+++ b/platform-jobs/samza/word-enrichment/src/main/config/word-enrichment.properties
@@ -38,7 +38,6 @@ language-api-url=__language_url__
 ekstepPlatformApiUserId=ilimi
 
 # Job specific config properties
-graph.dir=/data/graphDB
 redis.host=__redis_host__
 redis.port=__redis_port__
 redis.maxConnections=128
@@ -52,16 +51,21 @@ route.all=__other_bolt_url__
 route.bolt.read.all=__other_bolt_read_url__
 route.bolt.write.all=__other_bolt_write_url__
 shard.id=__mw_shard_id__
+graph.dir="/data/graphDB"
+graph.ids=["domain","language","en","hi","ka","te","ta"]
+platform.auth.check.enabled=false
+platform.cache.ttl=3600000
+
 
 #language-indexes 
 elastic-search-host=http://__es_host__
 elastic-search-port=__es_port__
-ignoreStartWordsList=<Sentence,id=,<fs,head=,case_name=,paradigm=,name=,inf=
-tagNamesList=NN,NST,PRP,DEM,VM,VAUX,JJ,RB,PSP,RP,CC,WQ,QF,QC,QO,CL,INTF,INJ,NEG,*C,RDP,ECH,UNK,NP,VGF,VGNF,VGINF,VGNN,JJP,RBP,NEGP,CCP,FRAGP,BLK
-discardTokensList=NNP,((,)),SYM
+["<Sentence","id=","<fs","head=","case_name=","paradigm=","name=","inf="]
+tagNamesList=["NN","NST","PRP","DEM","VM","VAUX","JJ","RB","PSP","RP","CC","WQ","QF","QC","QO","CL","INTF","INJ","NEG","*C","RDP","ECH","UNK","NP","VGF","VGNF","VGINF","VGNN","JJP","RBP","NEGP","CCP","FRAGP","BLK"]
+discardTokensList=["NNP","((","))","SYM"]
 attributesTagIdentifier=af
-specialCharRegEx=^([$&+,:;=?@#|!]*)$
-numberRegEx=^([+-]?\\d*\\.?\\d*)$
+specialCharRegEx="^([$&+,:;=?@#|!]*)$"
+numberRegEx="^([+-]?\\d*\\.?\\d*)$"
 defaultTokenCountAfterWord=10
 
 #language-map
@@ -81,5 +85,3 @@ ne=Nepali
 or=Odia
 pa=Punjabi
 sa=Sanskrit
-
-
