--- a/platform-jobs/samza/word-enrichment/src/main/config/word-enrichment.properties
+++ b/platform-jobs/samza/word-enrichment/src/main/config/word-enrichment.properties
@@ -60,7 +60,7 @@ platform.cache.ttl=3600000
 #language-indexes 
 elastic-search-host=http://__es_host__
 elastic-search-port=__es_port__
-["<Sentence","id=","<fs","head=","case_name=","paradigm=","name=","inf="]
+ignoreStartWordsList=["<Sentence","id=","<fs","head=","case_name=","paradigm=","name=","inf="]
 tagNamesList=["NN","NST","PRP","DEM","VM","VAUX","JJ","RB","PSP","RP","CC","WQ","QF","QC","QO","CL","INTF","INJ","NEG","*C","RDP","ECH","UNK","NP","VGF","VGNF","VGINF","VGNN","JJP","RBP","NEGP","CCP","FRAGP","BLK"]
 discardTokensList=["NNP","((","))","SYM"]
 attributesTagIdentifier=af
