Issue ekstep/Learning-Platform#1161 fix: cassandra new cluster related changes.

--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -47,7 +47,7 @@ route.bolt.read.all=__other_bolt_read_url__
 route.bolt.write.all=__other_bolt_write_url__
 shard.id=__mw_shard_id__
 cassandra.host=__cassandra_host__
-cassandra.port=__cassandra_port__
+cassandra.port=9042
 keyspace.name=__keyspace_name__
 keyspace.table=__keyspace_table__
 CONTENT_TO_VEC_URL=__content_to_vec_url__
