Issue #1199 chore : testCase to test load config properties from samza jobs

--- a/platform-jobs/samza/common/pom.xml
+++ b/platform-jobs/samza/common/pom.xml
@@ -15,6 +15,12 @@
 	<artifactId>samza-common</artifactId>
 	<dependencies>
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.samza</groupId>
 			<artifactId>samza-api</artifactId>
 			<version>${samza.version}</version>
