--- a/platform-jobs/samza/composite-search-indexer/pom.xml
+++ b/platform-jobs/samza/composite-search-indexer/pom.xml
@@ -22,6 +22,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+		    <groupId>org.neo4j</groupId>
+		    <artifactId>neo4j-bolt</artifactId>
+		    <version>3.0.4</version>
+   			<scope>test</scope>
+ 		</dependency>
+		<dependency>
 		    <groupId>org.mockito</groupId>
 		    <artifactId>mockito-all</artifactId>
 		    <version>1.10.19</version>
