--- a/platform-jobs/samza/object-lifecycle/pom.xml
+++ b/platform-jobs/samza/object-lifecycle/pom.xml
@@ -13,7 +13,7 @@
 		<hadoop.version>2.6.2</hadoop.version>
 	</properties>
 	<artifactId>object-lifecycle</artifactId>
-	<version>0.0.7</version>
+	<version>0.0.8</version>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -30,6 +30,12 @@
 			<groupId>org.ekstep</groupId>
 			<artifactId>samza-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.10.19</version>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 
