Issue #000 fix: application conf change for language service

--- a/language-platform/module/services/src/main/resources/application.conf
+++ b/language-platform/module/services/src/main/resources/application.conf
@@ -64,3 +64,6 @@ s3.artifact.folder=artifact
 s3.bundle.folder=bundle
 s3.media.folder=media
 s3.ecar.folder=ecar_files
+
+#Orchestrator env properties
+env="https://dev.ekstep.in/api/language"
