--- a/orchestrator/module/dac/pom.xml
+++ b/orchestrator/module/dac/pom.xml
@@ -15,5 +15,11 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>learning-actors</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 </project>
