Revert "Issue #1210 feat: Replace mongo with Cassandra"
This reverts commit d2f3794c1382e9ff176a359e3157005a70945fe5.

--- a/platform-modules/service/src/main/resources/application.conf
+++ b/platform-modules/service/src/main/resources/application.conf
@@ -22,8 +22,6 @@ content.metadata.visibility.parent=["textbookunit", "courseunit", "lessonplanuni
 # Cassandra Configuration
 keyspace.name=content_store
 keyspace.table=content_data
-orchestrator.keyspace.name=script_store
-orchestrator.keyspace.table=script_data
 cassandra.host=localhost
 cassandra.port=9042
 
@@ -70,13 +68,12 @@ env="https://dev.ekstep.in/api/learning"
 s3.env=dev
 
 #Environment specific buckets
-s3.public.bucket="ekstep-public-dev"
 s3.bucket.dev="ekstep-public"
 s3.bucket.qa=ekstep-public-qa
 s3.bucket.prod=ekstep-public-prod
 
 #S3 Region configuration
-s3.region=AP_SOUTH_1
+s3.region=AP_SOUTHEAST_1
 
 #Folder configuration
 s3.content.folder=content
