--- a/platform-tools/spikes/sunbird-tools/src/test/resources/loader.conf
+++ b/platform-tools/spikes/sunbird-tools/src/test/resources/loader.conf
@@ -26,3 +26,12 @@ api.dimension.create = ${ekstep.host}"/api/domain/v3/{domain}/dimensions/create"
 api.dimension.update = ${ekstep.host}"/api/domain/v3/{domain}/dimensions/update"
 
 api.user.profile = ${sunbird.host}"/api/user/v1/profile/read"
+
+api.org.create = ${sunbird.host}"/api/org/v1/create"
+api.org.update = ${sunbird.host}"/api/org/v1/update"
+api.org.update.status = ${sunbird.host}"/api/org/v1/status/update"
+api.member.add = ${sunbird.host}"/api/org/v1/member/add"
+api.member.remove = ${sunbird.host}"/api/org/v1/member/remove"
+
+api.user.create = ${sunbird.host}"/api/user/v1/create"
+api.user.update = ${sunbird.host}"/api/user/v1/create"
