Issue #000 fix: Update testCases to improve code coverage

--- a/searchIndex-platform/module/searchindex-consumer/pom.xml
+++ b/searchIndex-platform/module/searchindex-consumer/pom.xml
@@ -132,6 +132,16 @@
 								<exclude>**/ConsumerThread**</exclude>
 								<exclude>**/AuditHistoryMessageProcessor**</exclude>
 								<exclude>**/WordCountMessageProcessor**</exclude>
+								<exclude>**/LanguageEnrichmentMessageProcessor</exclude>
+								<exclude>**/WordTranslationMessageProcessor</exclude>
+								<exclude>**/WordEnrichMessageProcessor</exclude>
+								<exclude>**/RetireParentContentProcessor</exclude>
+								<exclude>**/ObjectLifecycleMessageProcessor</exclude>
+								<exclude>**/IMessageProcessor</exclude>
+								<exclude>**/ImageMessageProcessor</exclude>
+								<exclude>**/FlagParentContentProcessor</exclude>
+								<exclude>**/ContentEnrichmentMessageProcessor</exclude>
+								<exclude>**/BaseProcessor</exclude>
 							</excludes>
 						</instrumentation>
 						<check>
