--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -4,7 +4,9 @@ job.name=__env__.publishPipeline
 
 # YARN
 yarn.package.path=http://__yarn_host__:__yarn_port__/__env__/${project.artifactId}-${pom.version}-distribution.tar.gz
-
+yarn.am.container.memory.mb=__yarn_am_container_mb__
+yarn.container.memory.mb=__yarn_container_mb__
+ 
 # Metrics
 metrics.reporters=snapshot,jmx
 metrics.reporter.snapshot.class=org.apache.samza.metrics.reporter.MetricsSnapshotReporterFactory
@@ -25,6 +27,7 @@ systems.kafka.samza.msg.serde=json
 systems.kafka.streams.metrics.samza.msg.serde=metrics
 systems.kafka.consumer.zookeeper.connect=__zookeepers__
 systems.kafka.consumer.auto.offset.reset=smallest
+systems.kafka.samza.offset.default=oldest
 systems.kafka.producer.bootstrap.servers=__kafka_brokers__
 
 # Job Coordinator
