--- a/orchestrator/service/pom.xml
+++ b/orchestrator/service/pom.xml
@@ -50,5 +50,11 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-expression</artifactId>
+		    <version>${spring.version}</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
