--- a/orchestrator/module/dac/pom.xml
+++ b/orchestrator/module/dac/pom.xml
@@ -17,9 +17,9 @@
 		</dependency>
 		<dependency>
 			<groupId>com.ilimi</groupId>
-			<artifactId>learning-actors</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
+  			<artifactId>cassandra-connector</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+  			<type>jar</type>
 		</dependency>
 	</dependencies>
 </project>
