Issue ekstep/LearningPlatform#1210 tech: use cassandra for orchestrator scripts.

--- a/platform-core/pom.xml
+++ b/platform-core/pom.xml
@@ -22,6 +22,7 @@
 
 	<modules>
 		<module>platform-common</module>
+		<module>cassandra-connector</module>
 		<module>graph-engine</module>
 		<module>platform-dac</module>
 	</modules>
