--- a/orchestrator/service/pom.xml
+++ b/orchestrator/service/pom.xml
@@ -56,5 +56,11 @@
 		    <version>${spring.version}</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+    			<groupId>org.cassandraunit</groupId>
+    			<artifactId>cassandra-unit</artifactId>
+    			<version>3.1.1.0</version>
+    			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
