--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -23,6 +23,7 @@
 		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-bolt</artifactId>
+			<scope>test</scope>
 			<version>3.0.4</version>
 		</dependency>
 		<dependency>
