--- a/platform-tools/kernel-extension/transaction-event-handler/pom.xml
+++ b/platform-tools/kernel-extension/transaction-event-handler/pom.xml
@@ -24,6 +24,12 @@
 			<version>${neo4j.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-ha</artifactId>
 			<version>${neo4j.version}</version>
