--- a/platform-tools/kernel-extension/transaction-event-handler/pom.xml
+++ b/platform-tools/kernel-extension/transaction-event-handler/pom.xml
@@ -64,6 +64,22 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>cobertura-maven-plugin</artifactId>
+					<version>2.7</version>
+					<configuration>
+						<aggregate>true</aggregate>
+						<outputDirectory>coverageReport</outputDirectory>
+						<formats>
+							<format>html</format>
+							<format>xml</format>
+						</formats>
+						<check>
+							<haltOnFailure>false</haltOnFailure>
+						</check>
+					</configuration>
+				</plugin>
 		</plugins>
 	</build>
 </project>
