Issue #1270 feat: update configuration for all samza jobs

--- a/platform-jobs/samza/composite-search-indexer/src/main/config/local.composite-search-indexer.properties
+++ b/platform-jobs/samza/composite-search-indexer/src/main/config/local.composite-search-indexer.properties
@@ -14,6 +14,10 @@ metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 # Task
 task.class=org.ekstep.jobs.samza.task.CompositeSearchIndexerTask
 task.inputs=kafka.dev.learning.graph.events
+task.checkpoint.factory=org.apache.samza.checkpoint.kafka.KafkaCheckpointManagerFactory
+task.checkpoint.system=kafka
+task.checkpoint.replication.factor=1
+task.commit.ms=60000
 
 # Serializers
 serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
@@ -24,7 +28,7 @@ systems.kafka.samza.factory=org.apache.samza.system.kafka.KafkaSystemFactory
 systems.kafka.samza.msg.serde=json
 systems.kafka.streams.metrics.samza.msg.serde=metrics
 systems.kafka.consumer.zookeeper.connect=localhost:2181
-systems.kafka.consumer.auto.offset.reset=largest
+systems.kafka.consumer.auto.offset.reset=smallest
 systems.kafka.producer.bootstrap.servers=localhost:9092
 
 # Job Coordinator
