--- a/platform-jobs/samza/image-tagging/src/main/config/local.image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/local.image-tagging.properties
@@ -14,6 +14,10 @@ metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 # Task
 task.class=org.ekstep.jobs.samza.task.ImageTaggingTask
 task.inputs=kafka.telemetry.raw
+task.checkpoint.factory=org.apache.samza.checkpoint.kafka.KafkaCheckpointManagerFactory
+task.checkpoint.system=kafka
+task.checkpoint.replication.factor=1
+task.commit.ms=60000
 task.opts=-agentlib:jdwp=transport=dt_socket,address=localhost:9009,server=y,suspend=y
 
 # Serializers
@@ -25,7 +29,7 @@ systems.kafka.samza.factory=org.apache.samza.system.kafka.KafkaSystemFactory
 systems.kafka.samza.msg.serde=json
 systems.kafka.streams.metrics.samza.msg.serde=metrics
 systems.kafka.consumer.zookeeper.connect=localhost:2181
-systems.kafka.consumer.auto.offset.reset=largest
+systems.kafka.consumer.auto.offset.reset=smallest
 systems.kafka.producer.bootstrap.servers=localhost:9092
 
 # Job Coordinator
