--- a/platform-jobs/samza/publish-pipeline/src/main/config/local.publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/local.publish-pipeline.properties
@@ -14,6 +14,10 @@ metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 # Task
 task.class=org.ekstep.jobs.samza.task.PublishPipelineTask
 task.inputs=kafka.telemetry.raw
+task.checkpoint.factory=org.apache.samza.checkpoint.kafka.KafkaCheckpointManagerFactory
+task.checkpoint.system=kafka
+task.checkpoint.replication.factor=1
+task.commit.ms=60000
 task.opts=-agentlib:jdwp=transport=dt_socket,address=localhost:9009,server=y,suspend=y
 
 # Serializers
