Issue #000 fix: test-samza job issues fix.

--- a/platform-jobs/samza/testSamza/src/main/config/test-samza.properties
+++ b/platform-jobs/samza/testSamza/src/main/config/test-samza.properties
@@ -12,7 +12,7 @@ metrics.reporter.snapshot.stream=kafka.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.jobs.samza.task.testSamzaTask
+task.class=org.ekstep.jobs.samza.task.TestSamzaTask
 task.inputs=kafka.learning.graph.events
 
 # Serializers
