Issue #1277 feat: update swagger docs for content APIs and retireConcept API fix

--- a/docs/domain_model_v2/api-docs/swagger/content_model_api/content_model_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/content_model_api/content_model_apis.yaml
@@ -325,7 +325,7 @@ paths:
           schema:
             $ref: '#/definitions/ContentUploadErrorResponse'
       security: []
-  '/publish/{contentId}':
+  '/public/publish/{contentId}':
     post:
       tags:
         - Workflow
@@ -368,7 +368,7 @@ paths:
           schema:
             $ref: '#/definitions/ContentPublishErrorResponse'
       security: []
-  '/publish/unlisted/{contentId}':
+  '/unlisted/publish/{contentId}':
     post:
       tags:
         - Workflow
